# c-prog-lang

./: .gitignore  CMakeLists.txt  build.sh  clean-build.sh  generate.sh
1_07_print_value_EOF/: main.c  run_test.sh
1_08_count_blank_tab_newline/: input.txt  main.c  run_test.sh
1_09_replace_shrink_blanks/: input.txt  main.c  run_test.sh
1_10_replace_tab_backspace_backslash/: input.txt  main.c  run_test.sh
1_12_print_word_per_line/: input.txt  main.c  run_test.sh
1_13_histogram_by_word_length/: input.txt  main.c  run_test.sh
1_14_histogram_by_chars/: main.c  run_test.sh
1_15_celsius_to_fahr/: main.c  run_test.sh
1_16_print_longest_input_line/: input.txt  main.c  run_test.sh
1_17_print_lines_longer_than_80/: input.txt  main.c  run_test.sh
1_18_remove_trailing_blanks_tabs/: input.txt  main.c  run_test.sh
1_19_reverse_input/: input.txt  main.c  run_test.sh
1_20_detab/: debug.sh  input.txt  main.c  run_test.sh
1_21_entab/: input.txt  main.c  run_test.sh
1_22_fold/: debug.sh  input.txt  main.c  run_test.sh
1_23_remove_c_comments/: input.txt  main.c  main_t.c  run_test.sh
include/: project_config.h.in
